--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.3",
+    "razorpay": "^2.0.6",
     "sequelize": "^6.6.2"
   }
 }
